# kata

c/: .gitignore  CMakeLists.txt
c/test/: bankocr_test.cpp
clojure/bankocr/: README  project.clj
clojure/bankocr/src/bankocr/: core.clj
clojure/bankocr/test/bankocr/test/: core.clj
erlang/bankocr/: .gitignore  run.erl
erlang/bankocr/src/: bankocr.app.src  bankocr.erl  bankocr_app.erl  bankocr_sup.erl
erlang/bankocr/test/: bankocr_test.erl
go/bankocr/: bankocr.go  bankocr_test.go
lua/bankocr/: README.md  bankocr.lua
lua/bankocr/test/: atest.lua  bankocr_test.lua
php/bankocr/src/: bankocr.php
php/bankocr/test/: can-parse-multiple-codes.phpt  does-validate.phpt  prepares-for-printing.phpt
python/: bankocr.py  bankocr_test.py
ruby/lib/: bank_ocr.rb
ruby/spec/: bank_ocr_spec.rb
ruby/spec/fixtures/: e23456789.txt  missing-characters.txt  one-to-nine-strange.txt
